apollo-router/src/plugins/include_subgraph_errors/snapshots/apollo_router__plugins__include_subgraph_errors__tests__filter_global_allow_redact_msg.snap
---
source: apollo-router/src/plugins/include_subgraph_errors/tests.rs
description: "CONFIG:\n---\nall:\n  redact_message: true\n  allow_extensions_keys:\n    - code\n    - service\n\n\nREQUEST:\n{\n  \"data\": {\n    \"topProducts\": null\n  },\n  \"errors\": [\n    {\n      \"message\": \"Could not query products\",\n      \"path\": [],\n      \"extensions\": {\n        \"test\": \"value\",\n        \"code\": \"FETCH_ERROR\",\n        \"apollo.subgraph.name\": \"products\"\n      }\n    }\n  ]\n}"
expression: actual_responses
---
- data:
    topProducts: ~
  errors:
    - message: Subgraph errors redacted
      path: []
      extensions:
        code: FETCH_ERROR
        service: products
