apollo-router/src/plugins/include_subgraph_errors/snapshots/apollo_router__plugins__include_subgraph_errors__tests__redact_account_override_explicit_allow.snap
---
source: apollo-router/src/plugins/include_subgraph_errors/tests.rs
description: "CONFIG:\n---\nall: true\nsubgraphs:\n  accounts: false\n\n\nREQUEST:\n{\n  \"data\": null,\n  \"errors\": [\n    {\n      \"message\": \"Account service error\",\n      \"path\": [],\n      \"extensions\": {\n        \"code\": \"ACCOUNT_FAIL\",\n        \"apollo.subgraph.name\": \"accounts\"\n      }\n    }\n  ]\n}"
expression: actual_responses
---
- errors:
    - message: Subgraph errors redacted
      path: []
